# python-course

./: .gitignore  LICENSE  LICENSE-CONTENT  README.md  pyproject.toml
.github/: PLANTILLA-MODULO.md
.github/workflows/: ci.yml
modulo-01-fundamentos/: README.md  ejercicios.py
modulo-01-fundamentos/ejercicios/: 01_imc.py  02_fizzbuzz.py  03_parsear_version.py
modulo-01-fundamentos/soluciones/: 01_imc.py  02_fizzbuzz.py  03_parsear_version.py
modulo-02-estructuras/: README.md  ejercicios.py
modulo-02-estructuras/ejercicios/: 01_longitud_palabras.py  02_numeros_primos.py  03_frecuencia_caracteres.py  04_agrupar_por_longitud.py
modulo-02-estructuras/soluciones/: 01_longitud_palabras.py  02_numeros_primos.py  03_frecuencia_caracteres.py  04_agrupar_por_longitud.py
modulo-03-funciones/: README.md  ejercicios.py
modulo-03-funciones/ejercicios/: 01_cache_simple.py  02_fibonacci.py  03_pipeline.py
modulo-03-funciones/soluciones/: 01_cache_simple.py  02_fibonacci.py  03_pipeline.py
modulo-04-poo/: README.md
modulo-04-poo/ejercicios/: 01_bank_account.py  02_vehicles.py  03_employee.py
modulo-04-poo/soluciones/: 01_bank_account.py  02_vehicles.py  03_employee.py  modulo04.py
modulo-05-archivos/: README.md
modulo-05-archivos/ejercicios/: 01_process_sales.py  (+2 more)
modulo-06-async/: README.md
modulo-07-testing/: README.md
modulo-08-packaging/: README.md
proyecto/: README.md  pyproject.toml
proyecto/src/loganalyzer/: __init__.py  cli.py  filters.py  parser.py  reporter.py
proyecto/tests/: test_cli.py  test_filters.py  test_parser.py  test_reporter.py
(+23 files in other folders)
