[project]
name = "python-course"
version = "0.1.0"
description = "Curso de Python para desarrolladores C#"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "mypy>=1.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
