[project]
name = "loganalyzer"
version = "0.1.0"
description = "CLI de análisis de logs - proyecto hilo del curso"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
loganalyzer = "loganalyzer.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loganalyzer"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
